--- a/application/views/layouts/standard.html
+++ b/application/views/layouts/standard.html
@@ -96,7 +96,7 @@
     </div>
 
     <!-- the footer -->
-    <footer class="hidden-print footer">
+    <footer class="hidden-print">
         <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-3">
