Started Admin Data Search

--- a/application/views/layouts/navigation/admin.html
+++ b/application/views/layouts/navigation/admin.html
@@ -34,22 +34,7 @@
     <div class="sidebar-collapse">
         <ul class="nav" id="side-menu">
             <li><a href="/admin"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a></li>
-            <li>
-                <a href="#"><i class="fa fa-graduation-cap fa-fw"></i> My Internships<span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level">
-                    <li><a href="/employer/postinternship">Create</a></li>
-                    <li><a href="/employer/internships">Manage</a></li>
-                    <li><a href="/employer/applicants">Applicants</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Analytics<span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level">
-                    <li><a href="/admin/followers">Newsletters</a></li>
-                    <li><a href="/admin/data">Reach</a></li>
-                </ul>
-            </li>
-            <li><a href="/admin/support"><i class="fa fa-support fa-fw"></i> Support Tickets</a></li>
+            <li><a href="/admin/search"><i class="fa fa-search fa-fw"></i> Search</a></li>
         </ul>
     </div>
 </nav>
