--- a/application/views/admin/search.html
+++ b/application/views/admin/search.html
@@ -1,6 +1,6 @@
 <div id="page-wrapper">
     <div class="row col-lg-12">
-        <h1 class="page-header text-center">Search Details</h1>
+        <h1 class="page-header text-center">Search</h1>
         <form class="form-inline text-center" role="form" method="post" action="/admin/search" id="search">
             <div class="form-group">
                 <div class="input-group">
