--- a/application/views/layouts/navigation/admin.html
+++ b/application/views/layouts/navigation/admin.html
@@ -6,8 +6,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/employer">
-            Admin Panel
+        <a class="navbar-brand" href="/admin">
+            <i class="fa fa-user-secret fa-lg"></i> Admin Panel
         </a>
     </div>
     <!-- /.navbar-header -->
@@ -18,13 +18,9 @@
                 <i class="fa fa-user fa-fw"></i> {echo $user->name}  <i class="fa fa-caret-down"></i>
             </a>
             <ul class="dropdown-menu dropdown-user">
-                <li><a href="/employer/faq"><i class="fa fa-thumbs-up fa-fw"></i> Help</a></li>
-                <li><a href="/employer"><i class="fa fa-gear fa-fw"></i> Dashboard</a></li>
+                <li><a href="/employer"><i class="fa fa-briefcase fa-fw"></i> Employer</a></li>
+                <li><a href="/admin"><i class="fa fa-gear fa-fw"></i> Dashboard</a></li>
                 <li><a href="/logout"><i class="fa fa-sign-out fa-fw"></i> Logout</a></li>
-                <li class="divider"></li>
-                {foreach $mem in $member}
-                <li><a href="/employer/switchorg/{echo $mem->organization->id}"><i class="fa fa-briefcase fa-fw"></i> {echo $mem->organization->name}</a></li>
-                {/foreach}
             </ul>
         </li>
     </ul>
@@ -35,6 +31,27 @@
         <ul class="nav" id="side-menu">
             <li><a href="/admin"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a></li>
             <li><a href="/admin/search"><i class="fa fa-search fa-fw"></i> Search</a></li>
+            <li>
+                <a href="#"><i class="fa fa-area-chart fa-fw"></i> Analytics<span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level">
+                    <li><a href="admin/stats">Stats</a></li>
+                    <li><a href="admin/data">Data</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#"><i class="fa fa-newspaper-o fa-fw"></i> NewsLetter<span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level">
+                    <li><a href="admin/newsletter">Create</a></li>
+                    <li><a href="admin/newsletterManage">Manage</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#"><i class="fa fa-support fa-fw"></i> CRM<span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level">
+                    <li><a href="admin/crm">Create</a></li>
+                    <li><a href="admin/crmManage">Manage</a></li>
+                </ul>
+            </li>
         </ul>
     </div>
 </nav>
