Added CRM Navigation

--- a/application/views/layouts/navigation/admin.html
+++ b/application/views/layouts/navigation/admin.html
@@ -48,7 +48,8 @@
             <li>
                 <a href="#"><i class="fa fa-support fa-fw"></i> CRM<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
-                    <li><a href="admin/crm">Create</a></li>
+                    <li><a href="admin/crmTemplate">Template</a></li>
+                    <li><a href="admin/crmLead">Create</a></li>
                     <li><a href="admin/crmManage">Manage</a></li>
                 </ul>
             </li>
