--- a/application/views/admin/crmTemplate.html
+++ b/application/views/admin/crmTemplate.html
@@ -1,6 +1,12 @@
 <div id="page-wrapper">
     <div class="row col-lg-12">
         <h1 class="page-header text-center">CRM Template</h1>
+        {if isset($success)}
+        <div class="alert alert-success alert-dismissible fade in" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+            CRM Template Saved <strong>Successfully!</strong>
+        </div>
+        {/if}
         <form class="row" method="post" action="/admin/crmTemplate">
             <div class="form-group">
                 <label>Title</label>
@@ -30,18 +36,7 @@
                     <textarea name="message[]" class="form-control editor"></textarea>
                 </div>
             </div>
-            
-            <div class="panel panel-default panel-body">
-                <label class="text-center">Final Message</label>
-                <div class="form-group">
-                    <label>Subject</label>
-                    <input type="text" name="subject[]" class="form-control" maxlength="64" required="">
-                </div>
-                <div class="form-group">
-                    <label>Message Body</label>
-                    <textarea name="message[]" class="form-control editor"></textarea>
-                </div>
-            </div>
+
             <input type="hidden" name="action" value="createCrmTemplate">
             <button type="submit" class="btn btn-primary pull-right" id="crm_btn"><i class="fa fa-check-circle"></i> Save</button>
         </form>
