--- a/application/views/admin/index.html
+++ b/application/views/admin/index.html
@@ -1,5 +1,5 @@
 <div id="page-wrapper">
     <div class="row col-lg-12">
-
+        <h1 class="page-header text-center">Dashboard</h1>
     </div>
 </div>
