--- a/application/views/layouts/navigation/admin.html
+++ b/application/views/layouts/navigation/admin.html
@@ -34,23 +34,23 @@
             <li>
                 <a href="#"><i class="fa fa-area-chart fa-fw"></i> Analytics<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
-                    <li><a href="admin/stats">Stats</a></li>
-                    <li><a href="admin/data">Data</a></li>
+                    <li><a href="/admin/stats">Stats</a></li>
+                    <li><a href="/admin/data">Data</a></li>
                 </ul>
             </li>
             <li>
                 <a href="#"><i class="fa fa-newspaper-o fa-fw"></i> NewsLetter<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
-                    <li><a href="admin/newsletter">Create</a></li>
-                    <li><a href="admin/newsletterManage">Manage</a></li>
+                    <li><a href="/admin/newsletter">Create</a></li>
+                    <li><a href="/admin/newsletterManage">Manage</a></li>
                 </ul>
             </li>
             <li>
                 <a href="#"><i class="fa fa-support fa-fw"></i> CRM<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
-                    <li><a href="admin/crmTemplate">Template</a></li>
-                    <li><a href="admin/crmLead">Create</a></li>
-                    <li><a href="admin/crmManage">Manage</a></li>
+                    <li><a href="/admin/crmTemplate">Template</a></li>
+                    <li><a href="/admin/crmLead">Leads</a></li>
+                    <li><a href="/admin/crmManage">Manage</a></li>
                 </ul>
             </li>
         </ul>
