--- a/application/views/admin/crmLead.html
+++ b/application/views/admin/crmLead.html
@@ -1,11 +1,17 @@
 <div id="page-wrapper">
     <div class="row col-lg-12">
         <h1 class="page-header text-center">Lead Generation</h1>
-        <form class="form-horizontal col-md-offset-1 col-lg-8" method="post" action="">
+        {if isset($success)}
+        <div class="alert alert-success alert-dismissible fade in" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+            Lead Email Sent <strong>Successfully!</strong> click <a href="/admin/crmManage">here</a> for status
+        </div>
+        {/if}
+        <form class="form-horizontal col-md-offset-1 col-lg-8" method="post" action="" enctype="multipart/form-data">
             <div class="form-group">
                 <label class="col-sm-4 control-label">Select CRM template</label>
                 <div class="col-sm-8">
-                    <select class="form-control">
+                    <select class="form-control" name="crm_id">
                         {foreach $crm in $crms}
                         <option value="{echo $crm->id}">{echo $crm->title}</option>
                         {/foreach}
@@ -15,17 +21,17 @@
             <div class="form-group">
                 <label class="col-sm-4 control-label">Enter Emails Separated by Comma</label>
                 <div class="col-sm-8">
-                    <textarea class="form-control" rows="3"></textarea>
+                    <textarea name="emails" class="form-control" rows="3"></textarea>
                 </div>
             </div>
             <p class="text-center"><b>-- OR --</b></p>
             <div class="form-group">
                 <label class="col-sm-4 control-label">Upload Emails CSV File</label>
                 <div class="col-sm-8">
-                    <input type="file" id="fileInput" name="file" class="form-control">
+                    <input type="file" name="file" class="form-control">
                 </div>
             </div>
-            <input type="hidden" name="action" value="update">
+            <input type="hidden" name="action" value="leadGeneration">
             <button type="submit" class="btn btn-primary pull-right">Send <i class="fa fa-paper-plane fa-fw"></i></button>
         </form>
     </div>
