--- a/application/views/admin/crmManage.html
+++ b/application/views/admin/crmManage.html
@@ -1,4 +1,3 @@
-{include layouts/modal/lead.html}
 <div id="page-wrapper">
     <div class="row col-lg-12">
         <h1 class="page-header text-center">Leads</h1>
@@ -25,7 +24,7 @@
             </div>
             <input type="hidden" name="action" value="search">
             <button type="submit" class="btn btn-primary">Search</button>
-            <button type="button" data-toggle="modal" data-target="#lead_generation" class="btn btn-success">Create Lead</button>
+            <a href="/admin/crmLead" class="btn btn-success">Create Lead</a>
         </form>
         <hr>
         <div class="panel panel-default">
@@ -37,7 +36,7 @@
                 {echo $success}
                 {/if}
                 {else}
-                You have not created any leads till now. Create <a data-type="modal" data-target="#lead_generation">here</a>
+                You have not created any leads till now. Create <a href="/admin/crmLead">here</a>
                 {/else}
             </div>
             <table class="table table-hover table-striped">
@@ -45,6 +44,7 @@
                     <th>Id</th>
                     <th>Email</th>
                     <th>Status</th>
+                    <th>Created</th>
                     <th>Validity</th>
                     <th>Action</th>
                 </thead>
@@ -52,11 +52,12 @@
                     {foreach $lead in $leads}
                     <tr>
                         <td>{echo $lead->id}</td>
-                        <td>{echo $lead->email}</td>
+                        <td><a href="/admin/info/lead/{echo $lead->id}" target="_blank">{echo $lead->email}</a></td>
                         <td>{echo $lead->status}</td>
+                        <td>{echo $lead->created}</td>
                         <td>{echo $lead->validity}</td>
                         <td>
-                            
+                            <a href="/admin/update/lead/{echo $lead->id}" class="btn btn-primary btn-xs"><i class="fa fa-edit"></i> Edit</a>
                         </td>
                     </tr>
                     {/foreach}
