--- a/application/views/admin/newsletterCreate.html
+++ b/application/views/admin/newsletterCreate.html
@@ -48,5 +48,12 @@
             <input type="hidden" name="action" value="createNewsletter">
             <button type="submit" class="btn btn-primary pull-right">Schedule</button>
         </form>
+        
+        <legend>Notes</legend>
+        <p>Best Scheduling Day is Tuesday</p>
+        <p>Best Scheduling Time is between 6 AM to 6 PM</p>
+        <p>Use Tracking code on any link : <code>?utm_campaign=newsletter&utm_medium=email&utm_source=students</code>, utm_source can be changed for different user group</p>
+        <p></p>
+        
     </div>
 </div>
