--- a/application/views/layouts/navigation/admin.html
+++ b/application/views/layouts/navigation/admin.html
@@ -41,7 +41,7 @@
             <li>
                 <a href="#"><i class="fa fa-newspaper-o fa-fw"></i> NewsLetter<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
-                    <li><a href="/admin/newsletter">Create</a></li>
+                    <li><a href="/admin/newsletterCreate">Create</a></li>
                     <li><a href="/admin/newsletterManage">Manage</a></li>
                 </ul>
             </li>
