--- a/application/views/admin/index.html
+++ b/application/views/admin/index.html
@@ -1,5 +1,45 @@
 <div id="page-wrapper">
     <div class="row col-lg-12">
         <h1 class="page-header text-center">Dashboard</h1>
+        <div class="row">
+
+            <div class="col-lg-4">
+                <div class="list-group">
+                    <a class="list-group-item active text-center">
+                        <i class="fa fa-line-chart"></i> Stats
+                    </a>
+                    <a href="admin/search" class="list-group-item"><i class="fa fa-users fa-2x"></i>  Users <span class="badge">{echo $users}</span></a>
+                    <a href="admin/search" class="list-group-item"><i class="fa fa-graduation-cap fa-2x"></i>Opportunity Posted <span class="badge">{echo $opportunities}</span></a>
+                    <a href="admin/search" class="list-group-item"><i class="fa fa-fax fa-2x"></i>  Student Applicantions <span class="badge">{echo $applications}</span></a>
+                    <a href="admin/search" class="list-group-item"><i class="fa fa-bank fa-2x"></i>  Organizations <span class="badge">{echo $organizations}</span></a>
+                    <a href="admin/search" class="list-group-item"><i class="fa fa-fax fa-2x"></i>  Resumes <span class="badge">{echo $resumes}</span></a>
+                    <a href="admin/search" class="list-group-item"><i class="fa fa-paper-plane fa-2x"></i>  Leads <span class="badge">{echo $leads}</span></a>
+                </div>
+            </div>
+
+            <div class="col-lg-4">
+                <div class="list-group">
+                    <a class="list-group-item active text-center">
+                        <i class="fa fa-link"></i> Quick Links
+                    </a>
+                    <a href="https://www.youtube.com/watch?v=eFb62jX3WF4" target="_blank" class="list-group-item"><i class="fa fa-youtube-square fa-2x"></i>  Youtube Channel</a>
+                    <a href="https://www.facebook.com/swiftintern" target="_blank" class="list-group-item"><i class="fa fa-facebook-square fa-2x"></i>  Facebook Page</a>
+                    <a href="https://twitter.com/swiftintern" target="_blank" class="list-group-item"><i class="fa fa-twitter-square fa-2x"></i>  Twitter Account</a>
+                    <a href="https://github.com/swiftintern" target="_blank" class="list-group-item"><i class="fa fa-github-square fa-2x"></i>  Github Repos</a>
+                    <a href="https://www.linkedin.com/company/swiftintern-com" target="_blank" class="list-group-item"><i class="fa fa-linkedin-square fa-2x"></i>  Linkedin Company Page</a>
+                </div>
+            </div>
+
+            <div class="col-lg-4">
+                <div class="list-group">
+                    <a class="list-group-item active text-center">
+                        <i class="fa fa-support"></i> Support
+                    </a>
+                    <a href="/faq" class="list-group-item"><i class="fa fa-question-circle fa-2x"></i>  FAQs</a>
+                    <a href="/contact" class="list-group-item"><i class="fa fa-exclamation-circle fa-2x"></i>  Report a Problem</a>
+                </div>
+            </div>
+
+        </div>
     </div>
 </div>
