--- a/application/views/admin/index.html
+++ b/application/views/admin/index.html
@@ -22,7 +22,8 @@
                     <a class="list-group-item active text-center">
                         <i class="fa fa-link"></i> Quick Links
                     </a>
-                    <a href="https://www.youtube.com/watch?v=eFb62jX3WF4" target="_blank" class="list-group-item"><i class="fa fa-youtube-square fa-2x"></i>  Youtube Channel</a>
+                    <a href="https://www.youtube.com/channel/UCLc7UxaQmWQoREzxjfNENNg" target="_blank" class="list-group-item"><i class="fa fa-youtube-square fa-2x"></i>  Youtube Channel</a>
+                    <a href="https://plus.google.com/+Swiftinternindia" target="_blank" class="list-group-item"><i class="fa fa-google-plus-square fa-2x"></i>  Google+ Page</a>
                     <a href="https://www.facebook.com/swiftintern" target="_blank" class="list-group-item"><i class="fa fa-facebook-square fa-2x"></i>  Facebook Page</a>
                     <a href="https://twitter.com/swiftintern" target="_blank" class="list-group-item"><i class="fa fa-twitter-square fa-2x"></i>  Twitter Account</a>
                     <a href="https://github.com/swiftintern" target="_blank" class="list-group-item"><i class="fa fa-github-square fa-2x"></i>  Github Repos</a>
