Added DateTime Picker

--- a/application/views/layouts/employer.html
+++ b/application/views/layouts/employer.html
@@ -47,6 +47,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
         <script src="{echo CDN}plugins/bootbox/bootbox.min.js"></script>
         <script src="{echo CDN}plugins/metisMenu/jquery.metisMenu.js"></script>
+        <script type="text/javascript" src="{echo CDN}js/model.js"></script>
         <script src="{echo CDN}js/employer-3.0.js"></script>
 
         <!-- Plugin Scripts  -->
