Added form method

--- a/application/views/admin/newsletterCreate.html
+++ b/application/views/admin/newsletterCreate.html
@@ -7,7 +7,7 @@
             Newsletter Scheduled <strong>Successfully!</strong> click <a href="/admin/newsletterManage">here</a> for status
         </div>
         {/if}
-        <form class="row">
+        <form class="row" method="post" action="">
             <legend>Create Newsletter</legend>
             <div class="row">
                 <div class="col-xs-12 col-md-6">
