--- a/application/views/onlinetest/test.html
+++ b/application/views/onlinetest/test.html
@@ -49,7 +49,7 @@ $(document).ready(function () {
     $(window).blur(function () {
         if (warn > 1) {
             alert("Your Test is now cancelled");
-            window.location.href = 'home';
+            window.location.href = "/home";
         }
         alert("You are not allowed to open any new tab. or minimize the window");
         warn++;
