--- a/public/assets/css/custom-1.0.css
+++ b/public/assets/css/custom-1.0.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Poiret+One|Quicksand|Muli|Nunito|Play|Orbitron);
+@import url(http://fonts.googleapis.com/css?family=Poiret+One|Quicksand|Muli|Nunito:400,700|Play|Orbitron);
 html, body{font-family:"Quicksand",Helvetica,Arial,sans-serif;color:#878787;}
 .sb-page-header {
     background-color: #b84d45;
@@ -82,11 +82,36 @@ footer .pull-left, footer .pull-right{float:none !important;display:block;}
 
 h1.text-center
 {
-  margin: 0 auto 2em;
+  margin: 0 auto 1em;
+  padding: 0.5em 0;
+  position: relative;
+  width: 99%;
 }
+section.container
+{
+  position: relative;
+  margin-bottom: 0.5em;
+}
+section.container:before, section.container:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background-image: -webkit-linear-gradient(left, transparent, #000, transparent);
+  background-image: -moz-linear-gradient(left, #000, transparent);
+  background-image: -o-linear-gradient(left, #000, transparent);
+}
+section.container:before {
+  left: -3px;top: -3px;
+}
+section.container:after {
+  right: -3px;bottom: -3px;
+}
+
 h1.text-center strong
 {
   font-size: 120%;
+  color: rgb(74,74,74)
 }
 nav
 {
@@ -102,7 +127,11 @@ nav
 }
 .bs-glyphicons
 {
-  margin: 0 0 20px;
+  margin: 0;
+}
+div.row::after
+{
+  margin-bottom: 2em
 }
 .bs-glyphicons::before
 {
