--- a/application/views/employer/register.html
+++ b/application/views/employer/register.html
@@ -5,6 +5,7 @@
             <div class="alert alert-danger" role="alert">{echo $message}</div>
         {/if}
         <p class="text-center"><a href="{echo $url}" class="btn btn-primary"><i class="fa fa-linkedin fa-lg"></i>  | Continue with Linkedin</a></p>
+        <small class="help-block text-center">Note : Only Users having Company page on linkedin can post internship on our site, we take authenticity of listing very seriously</small>
         <div class="col-md-8 col-md-offset-2 panel panel-default panel-body">
             <div class="media">
                 <div class="media-left">
