--- a/public/assets/css/custom-1.0.css
+++ b/public/assets/css/custom-1.0.css
@@ -97,9 +97,10 @@ section.container:before, section.container:after {
   position: absolute;
   width: 100%;
   height: 3px;
-  background-image: -webkit-linear-gradient(left, transparent, #000, transparent);
-  background-image: -moz-linear-gradient(left, #000, transparent);
-  background-image: -o-linear-gradient(left, #000, transparent);
+  background-image: -webkit-linear-gradient(left, transparent, #878787, transparent);
+  background-image: -moz-linear-gradient(left, transparent, #878787, transparent);
+  background-image: -o-linear-gradient(left, transparent, #878787, transparent);
+  background-image: linear-gradient(left, transparent, #878787, transparent);
 }
 section.container:before {
   left: -3px;top: -3px;
