--- a/application/views/employer/index.html
+++ b/application/views/employer/index.html
@@ -30,7 +30,7 @@
                         <i class="fa fa-support"></i> Support
                     </a>
                     <a href="https://www.youtube.com/watch?v=eFb62jX3WF4" target="_blank" class="list-group-item"><i class="fa fa-youtube-square fa-2x"></i>  How to Post Internship?</a>
-                    <a href="/faq" class="list-group-item"><i class="fa fa-question-circle fa-2x"></i>  FAQs</a>
+                    <a href="/employer/resources" class="list-group-item"><i class="fa fa-question-circle fa-2x"></i>  FAQs</a>
                     <a href="/contact" class="list-group-item"><i class="fa fa-exclamation-circle fa-2x"></i>  Report a Problem</a>
                 </div>
             </div>
