Minor changes in About section

--- a/application/views/home/about.html
+++ b/application/views/home/about.html
@@ -7,17 +7,17 @@
 <section class="container">
     <article class="row">
         <div class="blog col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-            <p>SwiftIntern is the india largest student-focused internship portal, bringing students, employers and higher education institutions together in one centralized location. Swiftintern.com provides a wide variety of interactive tools and services to enable every student, employer and educator to better understand and optimize internship opportunities, enabling businesses to identify the best job candidates and for students to develop the real-world skills they will need upon graduation.</p>
+            <p>SwiftIntern is the India&#39;s largest student-focused internship portal, bringing students, employers and higher education institutions together in one centralized location. Swiftintern.com provides a wide variety of interactive tools and services to enable every student, employer and educator to better understand and optimize internship opportunities, enabling businesses to identify the best job candidates and for students to develop the real-world skills they will need upon graduation.</p>
             <p>
             <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/YvX96bbRIV8" frameborder="0" allowfullscreen></iframe>
             </div>
             </p>
-            <p>At SwiftIntern we know how hard finding the right internship can be. That's why we built SwiftIntern to be the #1 place to find internships and offer students all the internship resources you need to master the application process. </p>
-            <p>All of our expert resources, from résumé Creator to cover letter guides and interview advice are totally free for students so you can find your perfect internship without breaking your bank.</p>
+            <p>At SwiftIntern we know how hard finding the right internship can be. That&#39;s why we built SwiftIntern to be the &#35;1 place to find internships and offer students all the internship resources you need to master the application process. </p>
+            <p>All of our expert resources, from Resum&eacute; Creator to cover letter guides and interview advice are totally free for students so you can find your perfect internship without breaking your bank.</p>
             <p>When you are ready to apply, we have one of the largest selections of paid internships anywhere with a focus on amazing business internships and hard-to-find non-profit positions. </p>
             <p>SwiftIntern works with a number of leading non-profit organizations and has positions available in micro-finance, environmental sustainability and social justice.</p>
-            <p>Ultimately, college internships aren’t about getting a name on your résumé, they are about breaking into an industry you love and stacking the odds in your favor that you will land a rock star job right out of college. Over 70% of college interns are offered full-time jobs after completing their summer internships, so when preparing and applying for internships, you are doing all the heavy lifting for your future job search. </p>
+            <p>Ultimately, college internships aren&#39;t about getting a name on your resum&eacute;, they are about breaking into an industry you love and stacking the odds in your favor that you will land a rock star job right out of college. Over 70&#37; of college interns are offered full-time jobs after completing their summer internships, so when preparing and applying for internships, you are doing all the heavy lifting for your future job search. </p>
             <p>We understand that no one is busier than college students and we want to help you with any internship challenges you may face. Check out our <a href="blog">intern blog</a> for always updating information about how to find internships. Follow us on <a href="https://twitter.com/swiftintern">Twitter</a> or on <a href="https://www.facebook.com/swiftintern">Facebook</a> to get regular updates on new positions, and always feel free to email us at info@swiftintern.com with any questions you may have.</p>
         </div>
     </article>
